@@ -26,8 +26,6 @@ import javax.persistence.Embeddable;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
 
-import org.jboss.logging.Logger;
-
 import life.genny.qwanda.converter.ValidationListConverter;
 import life.genny.qwanda.validation.Validation;
 import life.genny.qwanda.validation.ValidationList;
@@ -43,10 +41,9 @@ import life.genny.qwanda.validation.ValidationList;
  * <li>The default mask used for data entry
  * </ul>
  * <p>
- * 
+ *
  * <p>
- * 
- * 
+ *
  * @author Adam Crow
  * @author Byron Aguirre
  * @version %I%, %G%
@@ -55,236 +52,223 @@ import life.genny.qwanda.validation.ValidationList;
 
 @Embeddable
 public class DataType implements Serializable {
-	private static final Logger log = Logger.getLogger(DataType.class);
+    public static final String DTT_LINK = "LNK_ATTRIBUTE"; // This datatype classname indicates the datatype belongs to
+    // the BaseEntity set with parent
+    @NotNull
+    @Size(max = 120)
+    private String dttCode; // e.g. java.util.String
 
-	public static final String DTT_LINK = "LNK_ATTRIBUTE"; // This datatype classname indicates the datatype belongs to
-															// the BaseEntity set with parent
-	@NotNull
-	@Size(max = 120)
-	private String dttCode; // e.g. java.util.String
+    @NotNull
+    @Size(max = 120)
+    private String className; // e.g. java.util.String
 
-	@NotNull
-	@Size(max = 120)
-	private String className; // e.g. java.util.String
+    @NotNull
+    @Size(max = 120)
+    private String typeName; // e.g. TEXT
 
-	@NotNull
-	@Size(max = 120)
-	private String typeName; // e.g. TEXT
+    private String inputmask;
 
-	private String inputmask;
+    /**
+     * A fieldlist that stores the validations for this object.
+     * <p>
+     * Note that this is stored into a single object
+     */
 
-	/**
-	 * A fieldlist that stores the validations for this object.
-	 * <p>
-	 * Note that this is stored into a single object
-	 */
+    @Column(name = "validation_list", length = 512)
+    @Convert(converter = ValidationListConverter.class)
+    private List<Validation> validationList = new CopyOnWriteArrayList<>();
 
-	@Column(name = "validation_list", length = 512)
-	@Convert(converter = ValidationListConverter.class)
-	private List<Validation> validationList = new CopyOnWriteArrayList<Validation>();
+    /**
+     * Constructor.
+     */
+    @SuppressWarnings("unused")
+    protected DataType() {
+        super();
+        // dummy for hibernate
+    }
 
-	/**
-	 * Constructor.
-	 * 
-	 * @param none
-	 */
-	@SuppressWarnings("unused")
-	protected DataType() {
-		super();
-		// dummy for hibernate
-	}
+    public DataType(final Class clazz) {
+        this(clazz, new ValidationList());
+    }
 
-	public DataType(final Class clazz) {
-		this(clazz, new ValidationList());
-	}
+    public DataType(final String className) {
+        this(className, new ValidationList());
+    }
 
-	public DataType(final String className) {
-		this(className, new ValidationList());
-	}
-
-	public DataType(final String className, final ValidationList aValidationList, final String name,
-			final String inputmask) {
+    public DataType(final String className, final ValidationList aValidationList, final String name,
+                    final String inputmask) {
         setDttCodeFromClassName(className);
-		setClassName(className);
-		setValidationList(aValidationList.getValidationList());
-		setTypeName(name);
-		setInputmask(inputmask);
-	}
+        setClassName(className);
+        setValidationList(aValidationList.getValidationList());
+        setTypeName(name);
+        setInputmask(inputmask);
+    }
 
-	public DataType(final String className, final ValidationList aValidationList, final String name) {
-		this(className, aValidationList, name, "");
-	}
+    public DataType(final String className, final ValidationList aValidationList, final String name) {
+        this(className, aValidationList, name, "");
+    }
 
-    public void setDttCodeFromClassName(String str){
-		String[] strs = str.split("\\.");
-		String type;
+    public void setDttCodeFromClassName(String str) {
+        String[] strs = str.split("\\.");
+        String type;
 
-		if (strs.length > 1){
-			type = strs[strs.length-1];
-		} else {
-			type = strs[0];
-		}
-		if (str.contains("DTT")) {
-			setDttCode(str);
-		}else {
-			setDttCode("DTT_" + type.toUpperCase());
-		}
-	}
+        if (strs.length > 1) {
+            type = strs[strs.length - 1];
+        } else {
+            type = strs[0];
+        }
+        if (str.contains("DTT")) {
+            setDttCode(str);
+        } else {
+            setDttCode("DTT_" + type.toUpperCase());
+        }
+    }
 
-	public DataType(final String className, final ValidationList aValidationList) {
-		this(className, aValidationList, className);
-	}
+    public DataType(final String className, final ValidationList aValidationList) {
+        this(className, aValidationList, className);
+    }
 
-	public DataType(final Class clazz, final ValidationList aValidationList) {
-		this(clazz.getCanonicalName(), aValidationList);
-	}
+    public DataType(final Class clazz, final ValidationList aValidationList) {
+        this(clazz.getCanonicalName(), aValidationList);
+    }
 
-	/**
-	 * @return the validationList
-	 */
-	public List<Validation> getValidationList() {
-		return validationList;
-	}
+    /**
+     * @return the validationList
+     */
+    public List<Validation> getValidationList() {
+        return validationList;
+    }
 
-	/**
-	 * @param validationList
-	 *            the validationList to set
-	 */
-	public void setValidationList(final List<Validation> validationList) {
-		this.validationList = validationList;
-	}
+    /**
+     * @param validationList the validationList to set
+     */
+    public void setValidationList(final List<Validation> validationList) {
+        this.validationList = validationList;
+    }
 
-	/**
-	 * @return the className
-	 */
-	public String getClassName() {
-		return className;
-	}
+    /**
+     * @return the className
+     */
+    public String getClassName() {
+        return className;
+    }
 
-	/**
-	 * @param className
-	 *            the className to set
-	 */
-	public void setClassName(final String className) {
-		this.className = className;
-	}
+    /**
+     * @param className the className to set
+     */
+    public void setClassName(final String className) {
+        this.className = className;
+    }
 
-	/**
-	 * @return the name
-	 */
-	public String getTypeName() {
-		return typeName;
-	}
+    /**
+     * @return the name
+     */
+    public String getTypeName() {
+        return typeName;
+    }
 
-	/**
-	 * @param name
-	 *            the name to set
-	 */
-	public void setTypeName(String name) {
-		this.typeName = name;
-	}
+    /**
+     * @param name the name to set
+     */
+    public void setTypeName(String name) {
+        this.typeName = name;
+    }
 
-	/**
-	 * @return the name
-	 */
-	public String getDttCode() {
-		return this.dttCode;
-	}
+    /**
+     * @return the name
+     */
+    public String getDttCode() {
+        return this.dttCode;
+    }
 
-	/**
-	 * @param code
-	 *            the name to set
-	 */
-	public void setDttCode(String code) {
-		this.dttCode = code;
-	}
-	/**
-	 * @return the inputmask
-	 */
-	public String getInputmask() {
-		return inputmask;
-	}
+    /**
+     * @param code the name to set
+     */
+    public void setDttCode(String code) {
+        this.dttCode = code;
+    }
 
-	/**
-	 * @param inputmask
-	 *            the inputmask to set
-	 */
-	public void setInputmask(String inputmask) {
-		this.inputmask = inputmask;
-	}
+    /**
+     * @return the inputmask
+     */
+    public String getInputmask() {
+        return inputmask;
+    }
+
+    /**
+     * @param inputmask the inputmask to set
+     */
+    public void setInputmask(String inputmask) {
+        this.inputmask = inputmask;
+    }
 
 
-	public void setClass(final Class clazz) {
-		final String simpleClassName = clazz.getCanonicalName();
-		setClassName(simpleClassName);
-	}
+    public void setClass(final Class clazz) {
+        final String simpleClassName = clazz.getCanonicalName();
+        setClassName(simpleClassName);
+    }
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see java.lang.Object#toString()
-	 */
-	@Override
-	public String toString() {
-		return "DType(" + className + ")";
-	}
+    @Override
+    public String toString() {
+        return "DType(" + className + ")";
+    }
 
-	static public DataType getInstance(final String className) {
-		final List<Validation> validationList = new CopyOnWriteArrayList<Validation>();
-		ValidationList vlist = new ValidationList(validationList);
-		DataType dataTypeInstance = new DataType(className, vlist);
-		return dataTypeInstance;
-	}
+    static public DataType getInstance(final String className) {
+        final List<Validation> validationList = new CopyOnWriteArrayList<Validation>();
+        ValidationList vlist = new ValidationList(validationList);
+        DataType dataTypeInstance = new DataType(className, vlist);
+        return dataTypeInstance;
+    }
 
-	// Is DataType summable?
+    // Is DataType summable?
 
-	static public boolean summable(DataType dtype) {
-		switch (dtype.getClassName()) {
-		case "java.lang.Integer":
-		case "Integer":
-		case "java.lang.Long":
-		case "Long":
-		case "java.lang.Double":
-		case "Double":
-		case "org.javamoney.moneta.Money":
-			return true;
-		default:
-			return false;
-		}
-	}
+    static public boolean summable(DataType dtype) {
+        switch (dtype.getClassName()) {
+            case "java.lang.Integer":
+            case "Integer":
+            case "java.lang.Long":
+            case "Long":
+            case "java.lang.Double":
+            case "Double":
+            case "org.javamoney.moneta.Money":
+                return true;
+            default:
+                return false;
+        }
+    }
 
-	static public Object Zero(DataType dtype) {
-		switch (dtype.getClassName()) {
-		case "java.lang.Integer":
-		case "Integer":
-			return new Integer(0);
-		case "java.lang.Long":
-		case "Long":
-			return new Long(0);
-		case "java.lang.Double":
-		case "Double":
-			return new Double(0.0);
-		case "org.javamoney.moneta.Money":
-		default:
-			return null;
-		}
-	}
+    static public Object Zero(DataType dtype) {
+        switch (dtype.getClassName()) {
+            case "java.lang.Integer":
+            case "Integer":
+                return Integer.valueOf(0);
+            case "java.lang.Long":
+            case "Long":
+                return Long.valueOf(0);
+            case "java.lang.Double":
+            case "Double":
+                return Double.valueOf(0.0);
+            case "org.javamoney.moneta.Money":
+            default:
+                return null;
+        }
+    }
 
-	static public Object add(DataType dtype, Object v1, Object v2) {
-		switch (dtype.getClassName()) {
-		case "java.lang.Integer":
-		case "Integer":
-			return ((Integer)v1) + ((Integer)v2);
-		case "java.lang.Long":
-		case "Long":
-			return ((Long)v1) + ((Long)v2);
-		case "java.lang.Double":
-		case "Double":
-			return ((Double)v1) + ((Double)v2);
-		case "org.javamoney.moneta.Money":
-		default:
-			return null;
-		}
-	}
+    static public Object add(DataType dtype, Object v1, Object v2) {
+        switch (dtype.getClassName()) {
+            case "java.lang.Integer":
+            case "Integer":
+                return ((Integer) v1) + ((Integer) v2);
+            case "java.lang.Long":
+            case "Long":
+                return ((Long) v1) + ((Long) v2);
+            case "java.lang.Double":
+            case "Double":
+                return ((Double) v1) + ((Double) v2);
+            case "org.javamoney.moneta.Money":
+            default:
+                return null;
+        }
+    }
 
 }
